k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman
  namespace: pacman
spec:
  replicas: 1

  selector:
    matchLabels:
      app: pacman

  template:
    metadata:
      labels:
        app: pacman
    spec:
      containers:
        - name: pacman
          image: 506456084249.dkr.ecr.us-east-1.amazonaws.com/pacman-dev-app:bbe6ac3
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8080

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi

          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
