k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman
  namespace: pacman
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
spec:
  type: LoadBalancer
  loadBalancerClass: eks.amazonaws.com/nlb

  selector:
    app: pacman

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
