k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: pacman
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
