k8s/mongo-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-allow-pacman
  namespace: pacman
spec:
  podSelector:
    matchLabels:
      app: mongo

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: pacman
      ports:
        - protocol: TCP
          port: 27017
